--- a/index.html
+++ b/index.html
@@ -26,8 +26,47 @@
         <p>
         <a class="button" href="#contact">Contact</a>
         </p>
+    </div>
 
 
+   <!-- Middle Section 1-->
+
+    <div class="middle">
+       <h2 id="process">Our Process</h2>
+       <br>
+       <img src="./resources/images/identify.svg" alt="identify">
+       <h3>Identify</h3>
+       <p>We focus on the most important details.</p>
+       <img src="./resources/images/understand.svg" alt="understand">
+       <h3>Understand</h3>
+       <p>We study our projects inside and out.</p>
+       <img src="./resources/images/execute.svg" alt="execute">
+       <h3>Execute</h3>
+       <p>We put everything we have into our work.</p>
+     </div>
+
+    <!-- Middle Bar-->
+    <div class="header">
+      <h2>Designed in New York</h2>
+    </div>
+
+    <!-- Middle Section 2-->
+
+    <div class="middle">
+      <h3 id="work">Portfolio</h3>
+      <p>Coming Soon</p>
+      <h3 id="team">Team</h3>
+      <p>We're Hiring!</p>
+      <h3 id="contact">Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
+
+    <!-- Footer -->
+    <div class="footer">
+    <p>© 2017 Broadway  <a class="button" href="#">Home</a> <a class="button" href="#process">Process</a> <a class="button" href="#work">Work</a> <a class="button" href="#team">Team</a>
+      <a class="button" href="#contact">Contact</a> </p>
     </div>
 
   </body>
